--- a/setup_colab.ipynb
+++ b/setup_colab.ipynb
@@ -43,8 +43,8 @@
         "# 2. Clone Repository\n",
         "import os\n",
         "\n",
-        "REPO_URL = \"https://github.com/USERNAME/your-sd-webui.git\"  # Ganti dengan repo Anda\n",
-        "REPO_NAME = \"your-sd-webui\"\n",
+        "REPO_URL = \"https://github.com/syapuanr/sd-webui.git\"  # \n",
+        "REPO_NAME = \"sd-webui\"\n",
         "\n",
         "if not os.path.exists(REPO_NAME):\n",
         "    !git clone {REPO_URL}\n",
